[gd_scene load_steps=5 format=3 uid="uid://dt68nvcfsdots"]

[ext_resource type="Texture2D" uid="uid://bo66xai4c1esv" path="res://art/ui/mainmenu.png" id="2_jqwth"]
[ext_resource type="Texture2D" uid="uid://pg4gs08jsbdh" path="res://art/ui/pointer.png" id="3"]
[ext_resource type="Script" path="res://scenes/ui/MainMenu.gd" id="4"]
[ext_resource type="FontFile" uid="uid://ceacdqc72473j" path="res://fonts/DraconisBold.ttf" id="4_lnqcr"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("4")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jqwth")
expand_mode = 1

[node name="Menu" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Pointer" type="VBoxContainer" parent="Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 2

[node name="selector1" type="TextureRect" parent="Menu/HBoxContainer/Pointer"]
layout_mode = 2
texture = ExtResource("3")
flip_h = true

[node name="selector2" type="TextureRect" parent="Menu/HBoxContainer/Pointer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3")
flip_h = true

[node name="selector3" type="TextureRect" parent="Menu/HBoxContainer/Pointer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3")
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
alignment = 2

[node name="PLAY" type="Button" parent="Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_lnqcr")
theme_override_font_sizes/font_size = 50
shortcut_in_tooltip = false
text = "Play"
flat = true

[node name="OPTIONS" type="Button" parent="Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_lnqcr")
theme_override_font_sizes/font_size = 50
shortcut_in_tooltip = false
text = "Options"
flat = true

[node name="QUIT" type="Button" parent="Menu/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_lnqcr")
theme_override_font_sizes/font_size = 50
shortcut_in_tooltip = false
text = "Quit"
flat = true

[connection signal="focus_entered" from="Menu/HBoxContainer/VBoxContainer/PLAY" to="." method="_on_PLAY_focus_entered"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/VBoxContainer/PLAY" to="." method="_on_PLAY_mouse_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/PLAY" to="." method="_on_PLAY_pressed"]
[connection signal="focus_entered" from="Menu/HBoxContainer/VBoxContainer/OPTIONS" to="." method="_on_OPTIONS_focus_entered"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/VBoxContainer/OPTIONS" to="." method="_on_OPTIONS_mouse_entered"]
[connection signal="focus_entered" from="Menu/HBoxContainer/VBoxContainer/QUIT" to="." method="_on_QUIT_focus_entered"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/VBoxContainer/QUIT" to="." method="_on_QUIT_mouse_entered"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/QUIT" to="." method="_on_QUIT_pressed"]
